# steer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  demo-hitl.tape  demo.tape  install.sh  run-hitl-container.sh  steer.example.yaml
.github/: dependabot.yml
.github/workflows/: RELEASE.md  ci.yml  docker.yml  release.yml
assets/: demo-hitl.tape  demo.tape
assets/demo-policies/: launch-tmux.sh  setup.sh  steer.yaml  strict-pii.cedar
benches/: proxy_overhead.rs
crates/steer-llm/: Cargo.toml  README.md
crates/steer-llm/src/: lib.rs
docs/: architecture.md  compliance.md  disabled-rules.md  enterprise.md  multi-tenant.md  performance.md  policies.md  providers.md  quickstart.md
dsl/: schema.cedarschema
dsl/policies/: default.cedar  demo-hitl.cedar
k6/: latency-overhead.js  mock-upstream.js  steer-bench.yaml  throughput-ceiling.js
src/: auth.rs  error.rs  headers.rs  lib.rs  main.rs  mcp_registry.rs  routing.rs  trace.rs
src/audit/: entry.rs  mod.rs
src/config/: mod.rs  validate.rs
src/detectors/: bias.rs  confidential.rs  exfiltration.rs  identity.rs  injection.rs  jailbreak.rs  mod.rs  threat.rs  tool_governance.rs  toxicity_sidecar.rs
src/handover/: mod.rs
src/middleware/: inflight.rs  mod.rs  tenant_context.rs
src/performance/: mod.rs  models.rs
src/pii/: mod.rs  patterns.rs
src/pipeline/: mod.rs
src/policy/: action.rs  cedar.rs  consistency.rs  control_mapper.rs  input.rs  mod.rs  registry.rs  sync_promoter.rs  watcher.rs
src/routes/: chat.rs  eval.rs  health.rs  holds.rs  mod.rs
src/streaming/: buffer.rs  enforcer.rs  mod.rs
src/streaming/parsers/: anthropic.rs  bedrock.rs  gemini.rs  mod.rs  openai.rs
src/tenants/: mod.rs  policy_config.rs
src/tokens/: cache.rs  costs.rs  mod.rs  usage.rs  yaml_source.rs
