[package]
name = "steer-core"
version = "0.1.1"
edition = "2021"
description = "EnforceGrid - core runtime enforcement engine"
license = "Apache-2.0"

[lib]
name = "steer_core"
path = "src/lib.rs"

[[bin]]
name = "steer"
path = "src/main.rs"

[[bench]]
name = "proxy_overhead"
harness = false

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "gzip", "rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
cedar-policy = "4"
regex = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
tokio-stream = "0.1"
async-stream = "0.3"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
bytes = "1"
arc-swap = "1"
notify = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
crc32fast = "1"

[profile.release]
lto = "fat"            # Cross-crate optimization across all dependencies
codegen-units = 1      # Better optimization at the cost of slower compile (release only)
strip = "symbols"      # Strip debug + symbol table — ~25-40% binary size reduction
panic = "abort"        # No unwinding — smaller binary; verified no catch_unwind in src/

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.8", features = ["html_reports"] }
